# sh3-pi

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  EXECUTION_PLAN.md  LINUX.md  MIGRATION_PHASE1_BUG_REPORT.md  PROJECT_AGENT_GUIDE.md  README.md  ble_pair_connect.py  ble_pair_now.py  ble_scan.py  ble_watch_and_connect.py  cert.pem  edit_profiles.py  edit_profiles_beurer.py  edit_profiles_nipro.py  extract_fora_profiles.py  extract_nipro_profiles.py  fix_beurer_external.py  hash_beurer_post.py  hash_nipro_post.py  hub_config.json  hub_db_backup.sh  hub_open_ui.sh  hub_prestart.sh  hub_watchdog.sh  install_boot_service.sh  key.pem  medical_ble_device.json  nc1_unworn.csv  nipro_paired_devices.json  omron_bp_device.json  requirements.txt  run_scan.ps1  run_toolkit.sh  run_web.sh  setup_bluez_hub.sh  setup_linux.sh  start_hub.sh  tools_bm54_pair_check.py
autostart/: medical-ble-hub-ui.desktop
datasheets/: BLE_Medical_Device_Architecture_Reference.md  comment.txt
docs/: DEVICE_WORKFLOWS.md  EXECUTION_PLAN.md  FALL_DETECTION.md  LINUX.md  PROJECT_AGENT_GUIDE.md
fall_detection/: __init__.py  alert_api.py  camera_loop.py  config.py  fall_detector.py  migration_walkthrough.md  pose_model.py
fall_detection_pi/: .gitignore  README.md  __init__.py  camera_loop.py  config.py  fall_detector.py  migration_walkthrough.md  pyproject.toml  requirements.txt  web_server.py
fall_detection_pi/tests/: _tryout_sim.py  test_fall_detector.py
hass-omron/: .gitignore  README.md  hacs.json
medical_ble_toolkit - CLI/: __init__.py  __main__.py  interactive.py  live_monitor.py  models.py  (+3 more)
(+5195 files in other folders)
