[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fall-detection-pi"
version = "0.2.0"
description = "Standalone CV fall / bed-exit detection for SH3 Pi hub (MediaPipe Tasks PoseLandmarker)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe>=0.10.30",
  "numpy>=1.26.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/gxpindia/SHHMHub"

# This directory *is* the Python package `fall_detection_pi`
[tool.setuptools]
package-dir = { "fall_detection_pi" = "." }
packages = ["fall_detection_pi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
